updated homepage in package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "punk-api",
-  "homepage": "https://jjgray90.github.io/punk-api",
+  "homepage": "https://punk-api.jjgray.me",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
